# fastapi-tdd-docker

./: README.md  docker-compose.yml
.github/workflows/: main.yml
project/: .coveragerc  .dockerignore  Dockerfile  Dockerfile.prod  pyproject.toml  setup.cfg
project/app/: main.py
project/app/api/: crud.py  summaries.py
project/db/: Dockerfile
project/tests/: conftest.py  test_ping.py  test_summaries.py  test_summaries_unit.py
