[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aerich[toml]==0.8.2",
    "asyncpg==0.30.0",
    "black==25.1.0",
    "fastapi==0.115.12",
    "flake8==7.2.0",
    "gunicorn==22.0.0",
    "httpx==0.28.1",
    "isort==6.0.1",
    "pydantic-settings==2.8.1",
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "tortoise-orm==0.25.0",
    "uvicorn==0.34.1",
]

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
